Added install order syntax and globally unique LABELs to support Project Infinity

--- a/ACBre/ACBre.ini
+++ b/ACBre/ACBre.ini
@@ -27,3 +27,12 @@ Forum = https://www.baldurs-gate.de/index.php?threads/ascalons-breagar.44520/
 # If you use other hosting sites, please check requirements and put direct download link  
 Download = https://github.com/Gitjas/ACBre
 
+# Type of LABELs used by the mod, read more here https://www.gibberlings3.net/forums/topic/32516-tutorial-what-is-label
+LabelType = GloballyUnique
+
+# Dynamic Install Order Category
+Type = NPC
+
+Before = c#brandock, c#grey, EET_end
+
+After = AC_QUEST, alternatives, amber, aurenaseph, bgqe, bst, DSotSC, EET, imoen_forever, Transitions
