-separated the setup lines and the ingame tp2 lines into separate files
-separated the setup lines and the ingame tp2 lines into separate files (game-acbre.tra and setup-acbre.tra).
	-added crossmod with "Another fine Hell" (SoD content)

--- a/ACBre/ACBre.ini
+++ b/ACBre/ACBre.ini
@@ -35,4 +35,4 @@ Type = NPC
 
 Before = c#brandock, c#grey, EET_end
 
-After = AC_QUEST, alternatives, amber, aurenaseph, bgqe, bst, DSotSC, EET, imoen_forever, Transitions
+After = AC_QUEST, alternatives, amber, aurenaseph, bgqe, bst, c#anotherfinehell, DSotSC, EET, imoen_forever, Transitions
